kubernetes/infrastructure/observability/opentelemetry-collector/install/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opentelemetry-collector-http
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/hostname: otel.lan.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: otel.lan.${CLUSTER_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${TRAEFIK_LB_IP}
    external-dns.kubernetes.io/target: ${TRAEFIK_LB_IP}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: observability-opentelemetry-allowlist@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: otel.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-collector
                port:
                  name: otlp-http
